# hebrew-agent-eval

./: .gitignore  README.md  pyproject.toml
src/hebrew_agent_eval/: __init__.py  cli.py  core.py  providers.py
tests/customer_service/: cs_001.yaml  cs_002.yaml  cs_003.yaml
